--- a/index.html
+++ b/index.html
@@ -7,60 +7,62 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation -->
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
-
-    <!-- Home Section -->
-    <header id="home">
-        <div class="hero">
-            <img src="image.jpeg" alt="Profile Photo" class="profile-photo">
-            <h1>Tanuruha Chaudhuri</h1>
-            <p>Web Developer | Technical Writer | Digital Strategist</p>
-            <a href="#contact" class="btn">Hire Me</a>
-        </div>
+    <header>
+        <h1>Tanuruha Chaudhuri</h1>
+        <p>Web Developer | Technical Writer | Digital Solutions Expert</p>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+    
+    <section id="home" class="section">
+        <h2>Empowering Businesses with Seamless Web Development & Technical Writing</h2>
+        <p>With 6+ years of experience in delivering responsive websites, technical documentation, and digital solutions tailored for businesses.</p>
+        <a href="#contact" class="btn">Hire Me</a>
+        <a href="#portfolio" class="btn">View My Work</a>
+    </section>
 
-    <!-- About Section -->
-    <section id="about">
+    <section id="about" class="section">
         <h2>About Me</h2>
+        <p>Founder of WindClips & MimiMomo | Worked with 200+ satisfied clients & 50+ organizations.</p>
         <p>I am a seasoned Web Developer & Technical Writer with expertise in building scalable websites and creating clear, concise, and engaging documentation.</p>
+    </section>
+
+    <section id="services" class="section">
+        <h2>My Services</h2>
         <ul>
-            <li>✔ Detail-Oriented</li>
-            <li>✔ 200+ satisfied clients</li>
-            <li>✔ Founder of WindClips & MimiMomo</li>
+            <li><b>Web Development:</b> HTML, CSS, JavaScript, PHP, Python</li>
+            <li><b>Technical Writing:</b> User Manuals, API Documentation, Whitepapers</li>
+            <li><b>SEO & Content Writing:</b> Blog Writing, Digital Marketing Content</li>
+            <li><b>Branding & Digital Promotion:</b> Social Media, Business Branding</li>
+            <li><b>Project & Data Management:</b> SPSS, MS Excel, ProjectLibre</li>
         </ul>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portfolio">
-        <h2>My Work</h2>
-        <div class="portfolio-grid">
-            <div class="project">
-                <h3>Project 1</h3>
-                <p>https://mimimomo.store/</p>
-            </div>
-            <div class="project">
-                <h3>Project 2</h3>
-                <p>https://windclips.com/</p>
-            </div>
-        </div>
+    <section id="portfolio" class="section">
+        <h2>Portfolio</h2>
+        <p>Some of my notable projects:</p>
+        <ul>
+            <li>Router Protocol Verification Project using System Verilog</li>
+            <li>B.Tech Final Year Project – AMI to MANCHESTER Code Converter</li>
+            <li>5000+ academic content projects completed</li>
+        </ul>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="section">
         <h2>Contact Me</h2>
-        <p>Email: tanuruha.10@gmail.com | Phone: +91-9433611984</p>
+        <p>Email: [Your Email] | Phone: [Your Contact Number]</p>
+        <p>LinkedIn / Website: [Your Links]</p>
     </section>
 
     <footer>
-        <p>© 2025 Tanuruha Chaudhuri | All Rights Reserved.</p>
+        <p>&copy; 2025 Tanuruha Chaudhuri. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
