--- a/index.html
+++ b/index.html
@@ -9,60 +9,60 @@
 <body>
     <header>
         <h1>Tanuruha Chaudhuri</h1>
-        <p>Web Developer | Technical Writer | Digital Solutions Expert</p>
+        <p>Web Developer | Technical Writer | Digital Marketer</p>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     
-    <section id="home" class="section">
-        <h2>Empowering Businesses with Seamless Web Development & Technical Writing</h2>
-        <p>With 6+ years of experience in delivering responsive websites, technical documentation, and digital solutions tailored for businesses.</p>
-        <a href="#contact" class="btn">Hire Me</a>
-        <a href="#portfolio" class="btn">View My Work</a>
-    </section>
-
-    <section id="about" class="section">
+    <section id="about">
         <h2>About Me</h2>
-        <p>Founder of WindClips & MimiMomo | Worked with 200+ satisfied clients & 50+ organizations.</p>
-        <p>I am a seasoned Web Developer & Technical Writer with expertise in building scalable websites and creating clear, concise, and engaging documentation.</p>
+        <img src="image.jpeg" alt="Tanuruha Chaudhuri">
+        <p>I am a seasoned Web Developer & Technical Writer with over 6 years of experience in delivering responsive websites, technical documentation, and digital solutions tailored for businesses.</p>
     </section>
 
-    <section id="services" class="section">
-        <h2>My Services</h2>
+    <section id="services">
+        <h2>Services</h2>
         <ul>
-            <li><b>Web Development:</b> HTML, CSS, JavaScript, PHP, Python</li>
-            <li><b>Technical Writing:</b> User Manuals, API Documentation, Whitepapers</li>
-            <li><b>SEO & Content Writing:</b> Blog Writing, Digital Marketing Content</li>
-            <li><b>Branding & Digital Promotion:</b> Social Media, Business Branding</li>
-            <li><b>Project & Data Management:</b> SPSS, MS Excel, ProjectLibre</li>
+            <li>Custom Web Development</li>
+            <li>Technical Writing & Documentation</li>
+            <li>SEO & Blog Writing</li>
+            <li>Branding & Digital Promotion</li>
+            <li>Project & Data Management</li>
         </ul>
     </section>
 
-    <section id="portfolio" class="section">
+    <section id="portfolio">
         <h2>Portfolio</h2>
         <p>Some of my notable projects:</p>
         <ul>
             <li>Router Protocol Verification Project using System Verilog</li>
-            <li>B.Tech Final Year Project – AMI to MANCHESTER Code Converter</li>
-            <li>5000+ academic content projects completed</li>
+            <li>AMi to MANCHESTER Code Converter</li>
+            <li>Over 5000+ academic content projects successfully completed</li>
         </ul>
     </section>
 
-    <section id="contact" class="section">
-        <h2>Contact Me</h2>
-        <p>Email: [Your Email] | Phone: [Your Contact Number]</p>
-        <p>LinkedIn / Website: [Your Links]</p>
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>Founder - WindClips (Oct 2020 – Present)</li>
+            <li>Founder - MimiMomo (E-commerce Brand)</li>
+            <li>Team Leader - Royal Research (March 2020 – October 2020)</li>
+            <li>Academic Content Writer - Royal Research (Sept 2018 – March 2020)</li>
+        </ul>
     </section>
 
-    <footer>
-        <p>&copy; 2025 Tanuruha Chaudhuri. All Rights Reserved.</p>
-    </footer>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: [Your Email]</p>
+        <p>Phone: [Your Contact Number]</p>
+        <p>LinkedIn / Website: [Your Links]</p>
+    </section>
 </body>
 </html>
