--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header>
-        <h1>Tanuruha Chaudhuri</h1>
-        <p>Web Developer | Technical Writer | Digital Marketer</p>
+        <div class="header-container">
+            <h1>Tanuruha Chaudhuri</h1>
+            <p>Web Developer | Content Writer | Digital Solutions Expert</p>
+        </div>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -23,7 +25,9 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <img src="image.jpeg" alt="Tanuruha Chaudhuri">
+        <div class="image-container">
+            <img src="image.jpeg" alt="Tanuruha Chaudhuri">
+        </div>
         <p>I am a seasoned Web Developer & Technical Writer with over 6 years of experience in delivering responsive websites, technical documentation, and digital solutions tailored for businesses.</p>
     </section>
 
@@ -37,6 +41,16 @@
             <li>Project & Data Management</li>
         </ul>
     </section>
+    
+    <section id="experience">
+        <h2>Work Experience</h2>
+        <ul>
+            <li>Founder - WindClips (Oct 2020 – Present)</li>
+            <li>Founder - MimiMomo (E-commerce Brand)</li>
+            <li>Team Leader - Royal Research (March 2020 – October 2020)</li>
+            <li>Academic Content Writer - Royal Research (Sept 2018 – March 2020)</li>
+        </ul>
+    </section>
 
     <section id="portfolio">
         <h2>Portfolio</h2>
@@ -45,16 +59,6 @@
             <li>Router Protocol Verification Project using System Verilog</li>
             <li>AMi to MANCHESTER Code Converter</li>
             <li>Over 5000+ academic content projects successfully completed</li>
-        </ul>
-    </section>
-
-    <section id="experience">
-        <h2>Work Experience</h2>
-        <ul>
-            <li>Founder - WindClips (Oct 2020 – Present)</li>
-            <li>Founder - MimiMomo (E-commerce Brand)</li>
-            <li>Team Leader - Royal Research (March 2020 – October 2020)</li>
-            <li>Academic Content Writer - Royal Research (Sept 2018 – March 2020)</li>
         </ul>
     </section>
 
